# ai-data-analyst-agent

./: .replit  pnpm-lock.yaml  pyproject.toml
artifacts/api-server/: package.json  tsconfig.json
artifacts/api-server/python_backend/: main.py  start.sh  store.py
artifacts/api-server/python_backend/routers/: advanced.py  analysis.py  chat.py  datasets.py  reports.py
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: proxy.ts
artifacts/data-analyst/: index.html  package.json
artifacts/data-analyst/.replit-artifact/: artifact.toml
artifacts/data-analyst/src/: App.tsx  index.css
artifacts/data-analyst/src/components/: layout.tsx  protected-route.tsx
artifacts/data-analyst/src/contexts/: auth-context.tsx
artifacts/data-analyst/src/lib/: supabase.ts
artifacts/data-analyst/src/pages/: advanced.tsx  analysis.tsx  chat.tsx  dashboard.tsx  login.tsx  reports.tsx  signup.tsx  upload.tsx
lib/api-spec/: openapi.yaml
